--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -16,6 +16,10 @@ jobs:
         steps:
             - name: Check out the repo
               uses: actions/checkout@v3
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
             - uses: actions/setup-go@v2
               with:
                 go-version: 1.21.3
@@ -30,10 +34,9 @@ jobs:
               with:
                 fallback: latest           
             - name: Build the docker image
-              run: |
-                    docker build . -f Dockerfile --tag beclab/headscale-api-wrapper:${{ steps.get-latest-tag.outputs.tag }}
-                    docker push beclab/headscale-api-wrapper:${{ steps.get-latest-tag.outputs.tag }}
-
-
-
-
+              uses: docker/build-push-action@v3
+                context: .
+                file: Dockerfile
+                push: true
+                tags: beclab/headscale-api-wrapper:${{ steps.get-latest-tag.outputs.tag }}
+                platforms: linux/amd64,linux/arm64
