--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -35,6 +35,7 @@ jobs:
                 fallback: latest           
             - name: Build the docker image
               uses: docker/build-push-action@v3
+              with:
                 context: .
                 file: Dockerfile
                 push: true
